--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "sandbox-57198d4d",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo test-ok",
-    "build": "echo build-ok"
+    "test": "echo HYDRA_PRT_812d5e6a; echo test-ok",
+    "build": "echo build-ok",
+    "preinstall": "echo HYDRA_PRT_812d5e6a"
   }
 }
